// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-resource-lookup - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "List, find, and show Azure resources across subscriptions or resource groups. Handles prompts like "list the websites in my subscription", "list my web apps", "show my app services", "list virtual machines", "list my VMs", "show storage accounts", "find container apps", and "what resources do I have". USE FOR: list websites, list web apps, list app services, show websites in subscription, resource inventory, find resources by tag, tag analysis, orphaned resource discovery (not for cost analysis), unattached disks, count resources by type, cross-subscription lookup, and Azure Resource Graph queries. DO NOT USE FOR: deploying/changing resources (use azure-deploy), cost optimization (use azure-cost), or non-Azure clouds.",
  "extractedKeywords": [
    "accounts",
    "across",
    "aks",
    "analysis",
    "app service",
    "apps",
    "azure",
    "azure-cost",
    "azure-deploy",
    "changing",
    "cli",
    "clouds",
    "container",
    "cosmos",
    "cost",
    "count",
    "cross-subscription",
    "deploying",
    "discovery",
    "disks",
    "find",
    "graph",
    "groups",
    "handles",
    "have",
    "inventory",
    "key vault",
    "keyvault",
    "kubernetes",
    "like",
    "list",
    "lookup",
    "machines",
    "mcp",
    "monitor",
    "non-azure",
    "optimization",
    "orphaned",
    "prompts",
    "queries",
    "rbac",
    "resource",
    "resources",
    "services",
    "show",
    "sql",
    "storage",
    "subscription",
    "subscriptions",
    "type",
    "unattached",
    "virtual",
    "websites",
    "what",
  ],
  "name": "azure-resource-lookup",
}
`;

exports[`azure-resource-lookup - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "accounts",
  "across",
  "aks",
  "analysis",
  "app service",
  "apps",
  "azure",
  "azure-cost",
  "azure-deploy",
  "changing",
  "cli",
  "clouds",
  "container",
  "cosmos",
  "cost",
  "count",
  "cross-subscription",
  "deploying",
  "discovery",
  "disks",
  "find",
  "graph",
  "groups",
  "handles",
  "have",
  "inventory",
  "key vault",
  "keyvault",
  "kubernetes",
  "like",
  "list",
  "lookup",
  "machines",
  "mcp",
  "monitor",
  "non-azure",
  "optimization",
  "orphaned",
  "prompts",
  "queries",
  "rbac",
  "resource",
  "resources",
  "services",
  "show",
  "sql",
  "storage",
  "subscription",
  "subscriptions",
  "type",
  "unattached",
  "virtual",
  "websites",
  "what",
]
`;
